get sandboxed iframe working for `ff` pages in addition to brushes (could still be some issues across the system)

--- a/system/public/sandboxed-iframe-mockup.html
+++ b/system/public/sandboxed-iframe-mockup.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style></style>
-  </head>
-  <body>
-    <div style="max-width: 500px; height: 500px">
-      <iframe
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        sandbox="allow-scripts"
-        src="https://localhost:8888/freaky-flowers~10"
-        style="min-height: 500px"
-        width="100%"
-        height="100%"
-        frameborder="0"
-      ></iframe>
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      background: black;
+      display: flex;
+    }
+
+    iframe {
+      border: none;
+      width: 320px;
+      height: 240px;
+      margin: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <iframe
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    sandbox="allow-scripts" src="https://localhost:8888/ff~0~0"
+    frameborder="0"></iframe>
+</body>
+
 </html>
