add color param to label and feed in wand color

--- a/system/public/sandboxed-iframe-mockup.html
+++ b/system/public/sandboxed-iframe-mockup.html
@@ -12,14 +12,14 @@
 
     body {
       margin: 0;
-      background: black;
+      background: grey;
       display: flex;
     }
 
     iframe {
       border: none;
-      width: 320px;
-      height: 240px;
+      width: 425px;
+      height: 500px;
       margin: auto;
     }
   </style>
@@ -28,7 +28,7 @@
 <body>
   <iframe
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    sandbox="allow-scripts" src="https://localhost:8888/ff~0~0"
+    sandbox="allow-scripts" src="https://localhost:8888/ff~0~5"
     frameborder="0"></iframe>
 </body>
 
