add `ff` docs to discord; change fog dynamics for vertical mode

--- a/system/public/sandboxed-iframe-mockup.html
+++ b/system/public/sandboxed-iframe-mockup.html
@@ -18,8 +18,10 @@
 
     iframe {
       border: none;
-      width: 537px;
-      height: 537px;
+      /* width: 537px; */
+      /* height: 537px; */
+      width: 293px;
+      height: 633px;
       margin: auto;
     }
   </style>
