--- a/auth0/index.html
+++ b/auth0/index.html
@@ -28,6 +28,28 @@
       caret-color: rgb(200, 30, 100);
     }
 
+    .form-control:focus {
+      outline: none;
+    }
+
+    .green-inner-border {
+      -webkit-box-shadow: inset 0px 0px 0px 5px rgba(25,169,116,0.3);
+      -moz-box-shadow: inset 0px 0px 0px 5px rgba(25,169,116,0.3);
+      box-shadow: inset 0px 0px 0px 5px rgba(25,169,116,0.3);
+    }
+
+    .red-inner-border {
+      -webkit-box-shadow: inset 0px 0px 0px 5px rgba(200, 30, 100, 0.5);
+      -moz-box-shadow: inset 0px 0px 0px 5px rgba(200, 30, 100, 0.5);
+      box-shadow: inset 0px 0px 0px 5px rgba(200, 30, 100, 0.5);
+    }
+
+    .moon-gray-inner-border {
+      -webkit-box-shadow: inset 0px 0px 0px 5px #CCCCCC;
+      -moz-box-shadow: inset 0px 0px 0px 5px #CCCCCC;
+      box-shadow: inset 0px 0px 0px 5px #CCCCCC;
+    }
+
     #btn-reset {
       display: none;
     }
@@ -39,48 +61,50 @@
   </style>
 <body>
   <div class="login-container">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4 login-box pa4">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4 login-box pa3">
       <!-- <div class="login-header">
         <img src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"/>
         <h3>Welcome</h3>
         <h5>PLEASE LOG IN</h5>
       </div> -->
-      <div id="error-message" class=" b f3  pink-red">Errorrrrrrr</div>
+      <div id="error-message" class="f3 pink-red">Errorrrrrrr</div>
       <form onsubmit="return false;" method="post">
         <div class="form-group">
           <input
             type="email"
-            class="form-control pink-cursor input-reset near-white f4 bg-transparent bw0 mb2 ml1"
+            class="form-control pink-cursor input-reset near-white f3 bg-transparent bw0 mb2 ml1"
             id="email"
             placeholder="Enter your email">
         </div>
         <div class="form-group">
           <input
             type="password"
-            class="form-control pink-cursor input-reset near-white f4 bg-transparent bw0 mb2 ml1"
+            class="form-control pink-cursor input-reset near-white f3 bg-transparent bw0 mb2 ml1"
             id="password"
             placeholder="Enter your password">
         </div>
         <div class="captcha-container form-group"></div>
-        <button
-          type="button"
-          id="btn-reset"
-          class="f3 link dim b bg-transparent white pointer pink-red bw0">
-            Reset Password?
-        </button>
-        <br>
-        <button
-          type="button"
-          id="btn-signup"
-          class="f3 link dim b bg-transparent white pointer bw0">
-            I'm New
-        </button>
-        <button
-          type="submit"
-          id="btn-login"
-          class="f3 link dim b bg-transparent green pointer bw0">
-            Log In
-        </button>
+        <div class="pl2">
+          <button
+            type="button"
+            id="btn-reset"
+            class="f3 ba bw1 pa1 mb2 red-inner-border b--dark-red link dim bg-red white pointer pink-red bw0">
+              Reset Password?
+          </button>
+          <br>
+          <button
+            type="button"
+            id="btn-signup"
+            class="f3 ba bw1 pa1 b--white moon-gray-inner-border bg-silver link dim white pointer bw0">
+              New Account
+          </button>
+          <button
+            type="submit"
+            id="btn-login"
+            class="f3 ba bw1 pa1 b--green green-inner-border bg-dark-green link dim green pointer bw0">
+              Log In
+          </button>
+        </div>
       </form>
     </div>
   </div>
