removed placeholder text from err message

--- a/auth0/index.html
+++ b/auth0/index.html
@@ -67,7 +67,7 @@
         <h3>Welcome</h3>
         <h5>PLEASE LOG IN</h5>
       </div> -->
-      <div id="error-message" class="f3 pink-red">Errorrrrrrr</div>
+      <div id="error-message" class="f3 pink-red"></div>
       <form onsubmit="return false;" method="post">
         <div class="form-group">
           <input
