cleaned up login template

--- a/auth0/index.html
+++ b/auth0/index.html
@@ -67,7 +67,7 @@
         <h3>Welcome</h3>
         <h5>PLEASE LOG IN</h5>
       </div> -->
-      <div id="error-message" class="f3 pink-red"></div>
+      <div id="error-message" class="f3 ml1 mb1 pink-red"></div>
       <form onsubmit="return false;" method="post">
         <div class="form-group">
           <input
@@ -87,19 +87,22 @@
         <div class="pl2">
           <button
             type="button"
+            tabindex="0"
             id="btn-reset"
-            class="f3 ba bw1 pa1 mb2 red-inner-border b--dark-red link dim bg-red white pointer pink-red bw0">
+            class="f3 ba bw1 pa1 mb2 red-inner-border b--dark-red link dim bg-red white pointer bw0">
               Reset Password?
           </button>
           <br>
           <button
             type="button"
+            tabindex="0"
             id="btn-signup"
             class="f3 ba bw1 pa1 b--white moon-gray-inner-border bg-silver link dim white pointer bw0">
               New Account
           </button>
           <button
             type="submit"
+            tabindex="0"
             id="btn-login"
             class="f3 ba bw1 pa1 b--green green-inner-border bg-dark-green link dim green pointer bw0">
               Log In
