changed button dimming

--- a/auth0/index.html
+++ b/auth0/index.html
@@ -58,6 +58,10 @@
       opacity: 0.75;
     }
 
+    button:disabled {
+      opacity: 0.75;
+    }
+
     #error-message {
       display: none;
       white-space: break-spaces;
