added animated background

--- a/auth0/index.html
+++ b/auth0/index.html
@@ -13,11 +13,9 @@
       src: url("https://assets.aesthetic.computer/type%2Fwebfonts%2FProggyClean.ttf") format("truetype")
     }
 
-
     body, html {
       height: 100%;
       font-family: "ProggyClean", sans-serif;
-      background-color: rgb(70, 50, 100);
     }
 
     .pink-red {
@@ -58,6 +56,14 @@
       opacity: 0.75;
     }
 
+    .form-control:focus::placeholder {
+      opacity: 0.5;
+    }
+
+    .z--100 {
+      z-index: -100;
+    }
+
     button:disabled {
       opacity: 0.75;
     }
@@ -68,7 +74,10 @@
     }
   </style>
 <body>
-  <div class="login-container">
+  <div>
+    <iframe src="https://aesthetic.computer/login-pattern" frameborder="0" class="fixed top z--100 w-100 h-100"></iframe>
+  </div>
+  <div class="login-container z-3">
     <div class="col-xs-12 col-sm-4 col-sm-offset-4 login-box pa3">
       <!-- <div class="login-header">
         <img src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"/>
