--- a/auth0/index.html
+++ b/auth0/index.html
@@ -78,7 +78,7 @@
     <iframe src="https://aesthetic.computer/login-pattern" frameborder="0" class="fixed top z--100 w-100 h-100"></iframe>
   </div>
   <div class="login-container z-3">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4 login-box pa3">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4 login-box pl2 pt3">
       <!-- <div class="login-header">
         <img src="https://cdn.auth0.com/styleguide/1.0.0/img/badge.svg"/>
         <h3>Welcome</h3>
@@ -89,7 +89,7 @@
         <div class="form-group">
           <input
             type="email"
-            class="form-control pink-cursor input-reset near-white f3 bg-transparent bw0 mb2 ml1"
+            class="form-control pink-cursor input-reset near-white f3 bg-transparent bw0 mb3 ml1"
             id="email"
             placeholder="Enter your email">
         </div>
@@ -121,7 +121,7 @@
             type="submit"
             tabindex="0"
             id="btn-login"
-            class="active-dim f3 ba bw1 pa1 b--green green-inner-border bg-dark-green link green pointer bw0">
+            class="active-dim ml2 f3 ba bw1 pa1 b--green green-inner-border bg-dark-green link green pointer bw0">
               Log In
           </button>
         </div>
