--- a/video-sync/index.html
+++ b/video-sync/index.html
@@ -7,6 +7,7 @@
     body {
       margin: 0;
       background: black;
+      overflow: hidden;
     }
   </style>
 </head>
@@ -15,8 +16,14 @@
   <video id="video" src="/boot/screenplay.mp4"
     style="width: 100%; height: 100%; object-fit: fill;"></video>
   <script>
-    // This will always point to the master machine when connected with a RJ45 / CAT5 cable.
-    const ws = new WebSocket('ws://192.168.1.1:8080');
+    // Parse the URL to get query parameters
+    const urlParams = new URLSearchParams(window.location.search);
+    // Check if the "ip" query parameter is present
+    const ip = urlParams.get('ip');
+    // Set the WebSocket URL based on the presence of the "ip" parameter
+    const wsUrl = ip ? `ws://${ip}:8080` : 'ws://localhost:8080';
+
+    const ws = new WebSocket(wsUrl);
     const video = document.getElementById('video');
 
     ws.onmessage = (event) => {
