--- a/video-sync/index.html
+++ b/video-sync/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <video id="video" src="/boot/screenplay.mp4"
+  <video id="video" muted src="/boot/screenplay.mp4"
     style="width: 100%; height: 100%; object-fit: fill;"></video>
   <script>
     // Parse the URL to get query parameters
