switch from query to hash

--- a/video-sync/index.html
+++ b/video-sync/index.html
@@ -19,13 +19,13 @@
   <script>
     const video = document.getElementById('video');
 
-    // Add an event listener for the 'loadedmetadata' event
+    // Add an event listener for the 'canplaythrough' event
     video.addEventListener('canplaythrough', () => {
-      // Parse the URL to get query parameters
-      const urlParams = new URLSearchParams(window.location.search);
-      // Check if the "ip" query parameter is present
-      const ip = urlParams.get('ip');
-      // Set the WebSocket URL based on the presence of the "ip" parameter
+      // Parse the URL to get the hash value
+      const hash = window.location.hash;
+      // Remove the leading '#' character from the hash
+      const ip = hash.slice(1);
+      // Set the WebSocket URL based on the hash value
       const wsUrl = ip ? `ws://${ip}:8080` : 'ws://localhost:8080';
 
       const ws = new WebSocket(wsUrl);
