--- a/video-sync/index.html
+++ b/video-sync/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <video id="video" muted src="/boot/screenplay.mp4"
+  <video id="video" preload muted src="/boot/screenplay.mp4"
     style="width: 100%; height: 100%; object-fit: fill;"></video>
   <script>
     const video = document.getElementById('video');
