added autofill styling

--- a/auth0/index.html
+++ b/auth0/index.html
@@ -80,6 +80,22 @@
       display: none;
       white-space: break-spaces;
     }
+
+    .form-control:autofill {
+      -webkit-box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      -moz-box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      border-width: .125rem;
+      border-color: #357EDD;
+    }
+
+    .form-control:-webkit-autofill {
+      -webkit-box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      -moz-box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      box-shadow: inset 0px 0px 0px 5px rgba(0, 102, 136, 0.5);
+      border-width: .125rem;
+      border-color: #357EDD;
+    }
   </style>
 <body>
   <div>
